[tool.poetry]
name = "instruction-ja"
version = "0.1.0"
description = ""
authors = ["Yuta Hayashibe <yuta@hayashibe.jp>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.2"
pyarrow = "^12.0.0"
pydantic = "^1.10.9"


[tool.poetry.group.dev.dependencies]
flake8 = ">=3.8.4"
isort = ">=5.6.4"
yamllint = ">=1.25.0"
pydocstyle = ">=5.1.1"
black = ">=21.11b1"
toml = ">=0.10.2"
coverage = ">=6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
reportUnusedVariable="warning"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
